# xspring

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTES.md  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/cli/: interactive_ui.rs  mod.rs  root.rs
src/cli/commands/: mod.rs
src/client/: mod.rs  spring_initializr.rs
src/handlers/: interactive.rs  list.rs  mod.rs
src/models/: list.rs  mod.rs  spring.rs
wix/: main.wxs
