[package]
name = "xspring"
version = "0.1.0"
edition = "2024"
authors = ["Shahul Malik <mohdshahulmalik@gmail.com"]
license = "MIT OR Apache-2.0"
description = "A tool to scaffold spring boot projects interactively like the vs code extension for scaffolding a spring boot project"
readme = "README.md"
homepage = "https://github.com/MohdShahulMalik/xspring"
repository = "https://github.com/MohdShahulMalik/xspring"
keywords = ["cli", "spring", "spring-boot", "generator", "scaffolding", "interactive"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[dependencies]
anyhow = "1.0.99"
clap = "4.5.47"
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
inquire = "0.7.5"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
zip = "5.0.1"
