[package]
name = "xspring"
version = "0.1.0"
edition = "2024"
authors = ["Shahul Malik <mohdshahulmalik@gmail.com"]
license = "MIT OR Apache-2.0"
description = "A tool to scaffold spring boot projects interactively like the vs code extension for scaffolding a spring boot project"
readme = "README.md"
homepage = "https://github.com/MohdShahulMalik/xspring"
repository = "https://github.com/MohdShahulMalik/xspring"
keywords = ["cli", "spring", "spring-boot", "generator", "interactive"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[package.metadata.wix]
upgrade-guid = "D6A021FD-D2A8-463C-9A1D-2A880FBC5ABE"
path-guid = "D89B20E6-3BE9-44CA-92BA-49365A1081B7"
license = false
eula = false

[dependencies]
anyhow = "1.0.99"
clap = "4.5.47"
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
inquire = "0.7.5"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
zip = "5.0.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.0"
# The Rust toolchain version to use in CI
rust-toolchain-version = "1.78.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# The jobs to run on git tags
publish-jobs = ["homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
